--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- Real Waxhaw image (CC0) -->
       <figure class="card media">
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/5/54/Waxhaw%2C_North_Carolina_01.jpg"
+          src="images/collage.jpg"
           alt="View of South Main Street in downtown Waxhaw"
           loading="lazy"
         />
