--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       <figure class="card media">
         <img
           src="images/collage.jpg"
-          alt="View of South Main Street in downtown Waxhaw"
+          alt="View of various Italian foods"
           loading="lazy"
         />
-        <figcaption>Downtown Waxhaw — South Main Street</figcaption>
+        <figcaption>Food!</figcaption>
       </figure>
     </section>
 
@@ -87,11 +87,11 @@
         <div class="grid grid-3">
           <!-- Event cards with placeholders you can swap later -->
           <article class="card">
-            <img src="https://placehold.co/600x400?text=Cooking+Class" alt="Placeholder for a cooking class photo" />
+            <img src="https://placehold.co/600x400?text=Cooking+Class" alt="Meeting" />
             <div class="card-body">
-              <h3>Pasta & Sauces Night</h3>
-              <p>Hands-on class featuring fresh tagliatelle and classic sughi.</p>
-              <p class="meta">Thursday · 6:30 PM · Community Kitchen</p>
+              <h3>Food Night</h3>
+              <p>Meeting at Queens South Waxhaw Oct 15th!</p>
+              <p class="meta">Wed · 6:30 PM · Queens South</p>
             </div>
           </article>
 
