--- a/index.html
+++ b/index.html
@@ -87,35 +87,13 @@
         <div class="grid grid-3">
           <!-- Event cards with placeholders you can swap later -->
           <article class="card">
-            <img src="https://placehold.co/600x400?text=Cooking+Class" alt="Meeting" />
+            <img src="images/queenssouth.jpg" alt="Meeting" />
             <div class="card-body">
               <h3>Food Night</h3>
               <p>Meeting at Queens South Waxhaw Oct 15th!</p>
               <p class="meta">Wed · 6:30 PM · Queens South</p>
             </div>
           </article>
-
-          <article class="card">
-            <img src="https://placehold.co/600x400?text=Film+Night" alt="Placeholder for film night" />
-            <div class="card-body">
-              <h3>Italian Cinema Under the Stars</h3>
-              <p>Bring a blanket; we’ll bring the subtitles and snacks.</p>
-              <p class="meta">Saturday · 8:00 PM · Park Lawn</p>
-            </div>
-          </article>
-
-          <article class="card">
-            <img src="https://placehold.co/600x400?text=Language+Table" alt="Placeholder for language table" />
-            <div class="card-body">
-              <h3>Conversazione al Caffè</h3>
-              <p>Casual Italian conversation groups—beginners welcome.</p>
-              <p class="meta">Sundays · 10:00 AM · Local Café</p>
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
-
     <section id="gallery" class="section container">
       <h2 class="section-title">Waxhaw × Italia — Gallery</h2>
       <p class="subtle">Swap the placeholders below with your own event photos.</p>
@@ -127,35 +105,10 @@
         </a>
 
         <!-- Placeholders to replace later -->
-        <img class="masonry-item" src="https://placehold.co/800x600?text=Your+Photo+Here" alt="Placeholder image" loading="lazy" />
-        <img class="masonry-item" src="https://placehold.co/600x800?text=Your+Photo+Here" alt="Placeholder image" loading="lazy" />
-        <img class="masonry-item" src="https://placehold.co/700x500?text=Your+Photo+Here" alt="Placeholder image" loading="lazy" />
-        <img class="masonry-item" src="https://placehold.co/500x700?text=Your+Photo+Here" alt="Placeholder image" loading="lazy" />
-      </div>
-    </section>
-
-    <section id="cannoli" class="section section-alt">
-      <div class="container grid grid-2">
-        <div>
-          <h2 class="section-title">Our Cannoli Corner</h2>
-          <p>
-            We’re serious about cannoli—crisp shells piped to order with
-            fluffy ricotta, a touch of orange zest, and pistachio crumble.
-            Look for our <strong>“Cannoli of the Month”</strong> at gatherings.
-          </p>
-          <ul class="feature-list">
-            <li>Classic Sicilian (ricotta & chocolate chip)</li>
-            <li>Pistachio & candied orange</li>
-            <li>Seasonal chef’s special</li>
-          </ul>
-          <a class="btn" href="#join">Get Involved</a>
-        </div>
-
-        <figure class="card media">
-          <!-- Placeholder: swap with your own cannoli photo -->
-          <img src="https://placehold.co/800x600?text=Fresh+Cannoli" alt="Placeholder for a plate of cannoli" loading="lazy" />
-          <figcaption>Freshly filled—just before serving.</figcaption>
-        </figure>
+        <img class="masonry-item" src="images/dad_italian.jpg" alt="Placeholder image" loading="lazy" />
+        <img class="masonry-item" src="images/newarticle.png" alt="Placeholder image" loading="lazy" />
+        <img class="masonry-item" src="images/wic.jpg" alt="Placeholder image" loading="lazy" />
+        <img class="masonry-item" src="images/sauce.jpg" alt="Placeholder image" loading="lazy" />
       </div>
     </section>
   </main>
