--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   <!-- Hero with real Waxhaw image -->
   <section class="hero">
     <picture>
-      <!-- Wikimedia Commons: Waxhaw footbridge (public domain) -->
+      <!-- Italian short video -->
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/3/38/Waxhaw%2C_NC%2C_Bridge.jpg"
-        alt="Historic footbridge over the railroad in downtown Waxhaw, NC"
+        src="images/movie1.mp4"
+        alt="Italian vibe"
         class="hero-img"
         loading="eager"
       />
